[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tkgstrator <nasawake.am@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
frida-tools = "^13.6.0"
frida = "^16.5.9"
paramiko = "^3.5.0"
scp = "^0.15.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
